# TDD-Practice

./: .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts
cmd_arg_parser/doc/: RequirementAnalysis.md
cmd_arg_parser/src/: BooleanOptionParser.py  OptionParser.py  SingleValuedOptionParser.py  my_app.py
cmd_arg_parser/src/Exceptions/: ArgumentQuantityException.py  InsufficientArgumentException.py  NotSufficientArgumentException.py  OptionNumberException.py  TooManyArgumentsException.py
cmd_arg_parser/src/Options/: Options.py  OptionsBase.py
cmd_arg_parser/src/Parsers/: BooleanOptionParser.py  OptionParser.py  OptionParserFactory.py  SingleValuedOptionParser.py
cmd_arg_parser/test/: test_boolean_option_parser.py  test_my_app.py  test_option_parser.py  test_single_valued_option_parser.py
gradle/wrapper/: gradle-wrapper.properties
self_practices/birthday_greetings/src/: EmailContent.py  birthday_greetings.py  database_repository.py  employee.py  utils.py
self_practices/birthday_greetings/src/models/: employee.py
self_practices/birthday_greetings/src/orms/: base_orm.py  relational_database.py
self_practices/birthday_greetings/test/: TestBirthdayGreetings.py  conftest.py  test_birthday_greetings.py  test_database_repository.py  test_employee.py  test_object_relational_mapping.py  test_sending_birthday_greetings.py
self_practices/fizzbuzz/: config.yaml
self_practices/fizzbuzz/src/: fizzbuzz.py
self_practices/fizzbuzz/test/: test_fizzbuzz.py
src/main/java/practice/tdd/args/: Args.java  Option.java  OptionParser.java  OptionParsers.java  UnsupportedOptionTypeException.java
src/main/java/practice/tdd/args/exceptions/: IllegalOptionException.java  IllegalValueException.java  InsufficientArgumentsException.java  TooManyArgumentsException.java
src/test/java/practice/tdd/args/: ArgsTest.java  OptionParsersTest.java
test/cmd_arg_parser/: test_my_app.py
