[tool.poetry]
name = "tdd-practice"
version = "0.1.0"
description = "In this repository, there are source about how to implement TDD strategy. I'll keep track of the code evolution to demonstrate how TDD is applied."
authors = ["Zhenqi Wang"]
readme = "README.md"
repository = "https://github.com/wang-zhenqi/TDD-Practice"
packages = [{ include = "tdd_practice" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2"

[tool.poetry.group.test.dependencies]
pytest = "^8"
pytest-mock = "^3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
