[tool.poetry]
name = "tdd-practice"
version = "0.1.0"
description = "In this repository, there are source about how to implement TDD strategy. I'll keep track of the code evolution to demonstrate how TDD is applied."
authors = ["Zhenqi Wang"]
readme = "README.md"
repository = "https://my-own-github/wang-zhenqi/TDD-Practice"
packages = [{ include = "tdd_practice" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
pyyaml = "^6.0.2"
sqlalchemy = "^2.0.34"
mysql-connector-python = "^9.0.0"

[tool.poetry.group.pre-commit.dependencies]
pre-commit = "^3.8.0"
black = "^24.8.0"
flake8 = "^7.1"
isort = "^5.13"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
